<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">MiWoTreff</string>
    <!-- Menu items -->
    <string name="action_sync">Sync with calendar</string>
    <string name="action_save">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="action_clean">Clean backup</string>
    <string name="action_search">Search entry</string>
    <string name="action_refresh">Load new data</string>
    <string name="action_done">Save changes</string>
    <string name="action_setting">Settings</string>
    <!-- backup and restore -->
    <string name="error_delete">Error deleting old backup files</string>
    <string name="load_success">%1$d added, %2$d updated.</string>
    <string name="restore_success">Restore data (%s entries) successfully.
    </string>
    <string name="error_storage_perm">ERROR: App has no permission for storage.</string>
    <string name="no_restore">No files to restore.</string>
    <string name="no_file_selected">No file selected to restore.</string>
    <string name="error_delItem">Error: %ld wasn\'t deleted.</string>
    <string name="error_mkdir">Can\'t create directory \'%s\'!</string>
    <string name="info_backup">Backup in File %s</string>
    <string name="count_del">%s Files deleted</string>
    <string name="no_del">No files to delete</string>
    <string name="error_write_file">Error writing backup file!</string>
    <string name="error_read_file">Error reading backup file!</string>
    <string name="error_parse_file">Error parsing json file!</string>
    <!-- load program -->
    <string name="load_msg">Loading program…</string>
    <string name="error_pl_noconnect">There is no internet connection to load.
    </string>
    <string name="error_pl_fetch">Error fetching data from website.</string>
    <string name="error_pl_nodata">There is no data on the website.</string>
    <!-- Search -->
    <string name="search_hint">Search Date, Topic, Person</string>
    <string name="search_title">Search</string>
    <!-- Edit activity -->
    <string name="edit_title">Edit</string>
    <!-- Contextual Action Mode -->
    <string name="share">Share</string>
    <string name="shareWith">Share with…</string>
    <string name="addToCall">Add to Calendar</string>
    <string name="cal_prefix" translatable="false">Mittwochstreff:</string>
    <string name="cal_loc">Möhlstraße 20, 80935 Munich</string>
    <string name="title_count_selected">One entry selected.</string>
    <string name="shareText_today">Today the topic on #Mittwochstreff is \"%1$s\".\nEverybody is welcome to join. It starts at 19:30 o\'clock in Möhlstraße 20, 80935 Munich.</string>
    <string name="shareText_future">On %2$s the topic on #Mittwochstreff is \"%1$s\".\nEverybody is welcome to join. It starts at 19:30 o\'clock in Möhlstraße 20, 80935 Munich.</string>
    <string name="shareText_past">On %2$s the topic on #Mittwochstreff was \"%1$s\".</string>
    <!-- calendar syncing -->
    <string name="sync_choose_title">Choose a calendar</string>
    <string name="sync_no_calendars">No calendars found!</string>
    <string name="sync_result">%d events added or updated.</string>
    <string name="error_pl_parse">Error parsing json data!</string>
    <string name="sync_confim_message">All entries from now into the future will be synced to your calendar. If you don\'t want that, then press cancel.</string>
    <string name="sync_confim_title">Sync with calendar?</string>
    <string name="sync_confirm_cancel">Cancel</string>
    <string name="sync_confirm_yes">Sync now</string>
    <string name="sync_perm_error">ERROR: App has no permission for calendar!</string>
    <!-- settings -->
    <string name="setting_cat_set">Set options to handle sync and deleting old files</string>
    <string name="setting_cat_about">About</string>
    <string name="setting_auto_sync">Enable auto sync</string>
    <string name="setting_files_keep">Number of files</string>
    <string name="setting_about">
        Version %1$s
        \n&#169; %2$d by Michael Munzert, Email: MicMunze@gmail.com</string>
    <string name="auto_sync_summary_off">Auto synchronization is disabled, so the app does not load automatically new program data.</string>
    <string name="auto_sync_summary_on">Auto synchronization is enabled, so the app loads automatically new program data.</string>
    <string name="files_keep_summary">Keep the newest %s backup files while deleting</string>
    <!-- Background job -->
    <string name="channel_text">Channel for MiWoTreff-Sync</string>
    <string name="channel_name">sync_channel</string>
</resources>
