<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title=""/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="110"
        app:showAsAction="ifRoom"
        android:title=""/>
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="120"
        app:showAsAction="never"
        android:title="@string/action_save"/>
    <item
        android:id="@+id/action_restore"
        android:orderInCategory="130"
        app:showAsAction="never"
        android:title="@string/action_restore"/>
    <item
        android:id="@+id/action_clean"
        android:orderInCategory="140"
        app:showAsAction="never"
        android:title="@string/action_clean"/>
</menu>
